# tau-editor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  E2E_KNOWN_ISSUES.md  E2E_TEST_REPORT.md  INSTALL.md  INTEGRATION_REPORT.md  PERFORMANCE_OPTIMIZATION_PROPOSAL.md  PHASE10_BUILD_LOG.md  PHASE10_PARALLEL_WORK_COMPLETE.md  PHASE9_PROGRESS.md  README.md  SHORTCUTS.md  SOC_DISPATCH_2026-03-11_PHASE5.md  SOC_DISPATCH_2026-03-11_PHASE7.md  SOC_DISPATCH_2026-03-11_PHASE9.md  SOC_DISPATCH_2026-03-12_0122.md  SOC_STATUS_2026-03-11_1542_FINAL.md  SOC_STATUS_2026-03-11_1645.md  SOC_STATUS_2026-03-11_1730.md  SOC_STATUS_2026-03-11_1743.md  SOC_STATUS_2026-03-11_1930.md  SOC_STATUS_2026-03-11_1945.md  SOC_STATUS_2026-03-11_2100.md  SOC_STATUS_2026-03-11_2200.md  SOC_STATUS_2026-03-11_2219.md  SOC_STATUS_2026-03-12_0045.md  SOC_STATUS_2026-03-12_0122.md  TEST_DIAGNOSIS.md  TEST_PROGRESS_2026-03-11_1809.md  USER_GUIDE.md  UX_IMPROVEMENTS.md  architecture.md  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  requirements.md  run-e2e-tests.sh  (+1 more)
docs/: 测试准备完成报告.md  测试用例.md  测试策略.md  需求文档.md  (+1 more)
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src-tauri/src/commands/: file.rs  file_optimized.rs  mod.rs  settings.rs  startup.rs
frontend/src-tauri/src/services/: auto_save.rs  file_watcher.rs  mod.rs
frontend/src-tauri/src/utils/: encoding.rs  mod.rs  path.rs
frontend/src-tauri/tests/: command_tests.rs
(+158 files in other folders)
